--- a/5장/5.md
+++ b/5장/5.md
@@ -106,3 +106,60 @@ class TransmissionParser {
 }
 ```
 쓸모없는 정보 대신 바라는 것, 받은 것, 전체 맥락 세 가지를 제공한다.
+
+## 5.7 항상 자원 닫기
+
+```java
+class Logbook {
+    // ...
+    List<Path> getLogs() throws IOException {
+        List<Path> result = new ArrayList<>();
+        DirectoryStream<Path> directoryStream = Files.newDirectoryStream("Path");
+        // ... 
+        directoryStream.close();
+        return result;
+    }
+}
+```
+
+프로그램에는 디스크 공간이나 데이터베이스, 네트워크 연결, CPU 스레드, RAM과 같은 시스템 자원이 필요하다.
+이러한 자원은 제한되어 있기 때문에 프로그램은 자원을 서로 공유해야 한다.
+
+더 이상 자원이 필요없으면 바로 해제해야 한다.
+
+위 코드는 `close()` 메서드를 통해 문제가 없어보이지만 해제하기 전에 예외가 발생하면 `close()`가 실행되지 않는다.
+
+```java
+import java.nio.file.DirectoryStream;
+
+class Logbook {
+    // ...
+    List<Path> getLogs() throws IOException {
+        List<Path> result = new ArrayList<>();
+
+        try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream("Path")) {
+            //...
+        }
+        return result;
+    }
+}
+```
+
+자바7부터는 try-with-resources 구문으로 자원을 안전하게 닫을 수 있다. `AutoCloseable` 인터페이스를 구현한 클래스여야 동작한다.
+
+```java
+DirectoryStream<Path> resource = Files.newDirectoryStream("Path");
+try {
+    // ...
+} finally {
+    if (resource != null) {
+        resource.close();
+    }
+}
+```
+컴파일러가 위와 같이 확장하기 때문에 `NullPointerException`도 피할 수 있다.
+
+> 여러 개 자원을 닫기 위해서는 아래와 같이 사용하면 된다. 
+> ```java
+> try (open resource1; open resource2) { ... }
+> ```
